# tauri-compilation-slow-example

./: Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  mock_api.rs
theseus/: Cargo.toml
theseus/src/: error.rs  lib.rs
theseus/src/api/: jre.rs  mod.rs
theseus/src/event/: emit.rs
theseus/src/state/: metadata.rs  mod.rs  projects.rs  settings.rs  tags.rs
theseus/src/util/: fetch.rs  jre.rs  mod.rs
theseus_gui/: pnpm-lock.yaml
theseus_gui/src/: main.js
theseus_gui/src-tauri/: Cargo.toml  tauri.conf.json
theseus_gui/src-tauri/src/: commands.rs  main.rs  state.rs  tasks.rs
theseus_gui/src-tauri/src/api/: jre.rs  mod.rs
theseus_gui/src/components/ui/: JavaDetectionModal.vue
theseus_gui/src/helpers/: jre.js
